fix: fix known team and member logic issues
