# docs/swagger.json
@@ -1,10 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "LabelPlus Next Web 后端 API 文档",
+        "title": "LabelPlus Next Web API",
+        "contact": {},
+        "version": "0.1.0"
     },
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "使用 QQ 和密码进行登录，成功返回访问令牌",
                 "consumes": [
@@ -38,7 +42,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "description": "使用 QQ、密码、名字和邀请码进行注册，成功返回访问令牌",
                 "consumes": [
@@ -72,8 +76,13 @@
                 }
             }
         },
-        "/api/v1/invitations": {
+        "/invitations": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "获取指定汉化组的邀请列表，注意当列表为空，会返回 null 而不是空数组",
                 "produces": [
                     "application/json"
@@ -104,6 +113,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "在指定汉化组中创建一个新的邀请",
                 "consumes": [
                     "application/json"
@@ -143,8 +157,13 @@
                 }
             }
         },
-        "/api/v1/invitations/{invitation_id}": {
+        "/invitations/{invitation_id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "删除指定的邀请",
                 "produces": [
                     "application/json"
@@ -169,6 +188,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "更新指定邀请的信息",
                 "consumes": [
                     "application/json"
@@ -205,8 +229,13 @@
                 }
             }
         },
-        "/api/v1/members": {
+        "/members": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "获取指定汉化组的成员列表，注意当列表为空，会返回 null 而不是空数组",
                 "produces": [
                     "application/json"
@@ -247,10 +276,52 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "由超级管理员直接创建成员记录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "member"
+                ],
+                "summary": "创建成员",
+                "parameters": [
+                    {
+                        "description": "创建成员参数",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/value.CreateMemberArgs"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/value.CreateMemberResult"
+                        }
+                    }
+                }
             }
         },
-        "/api/v1/members/{member_id}": {
+        "/members/{member_id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "从汉化组中移除指定成员",
                 "produces": [
                     "application/json"
@@ -275,6 +346,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "更新指定成员的分工角色",
                 "consumes": [
                     "application/json"
@@ -311,8 +387,13 @@
                 }
             }
         },
-        "/api/v1/teams": {
+        "/teams": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "获取所有汉化组列表，仅超级管理员有权限，注意当列表为空，会返回 null 而不是空数组",
                 "produces": [
                     "application/json"
@@ -334,6 +415,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "创建一个新的汉化组，仅超级管理员有权限",
                 "consumes": [
                     "application/json"
@@ -366,8 +452,13 @@
                 }
             }
         },
-        "/api/v1/teams/mine": {
+        "/teams/mine": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "获取当前用户所在的汉化组列表，注意当列表为空，会返回 null 而不是空数组",
                 "produces": [
                     "application/json"
@@ -389,8 +480,13 @@
                 }
             }
         },
-        "/api/v1/teams/{team_id}": {
+        "/teams/{team_id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "删除指定汉化组，超级管理员或团队管理员有权限",
                 "produces": [
                     "application/json"
@@ -415,6 +511,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "更新指定汉化组的信息，超级管理员或团队管理员有权限",
                 "consumes": [
                     "application/json"
@@ -451,8 +552,13 @@
                 }
             }
         },
-        "/api/v1/users": {
+        "/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "根据查询条件获取用户列表，支持按 QQ、模糊名称筛选，注意当列表为空，会返回 null 而不是空数组",
                 "produces": [
                     "application/json"
@@ -500,8 +606,13 @@
                 }
             }
         },
-        "/api/v1/users/{user_id}": {
+        "/users/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "根据用户 ID 获取用户详细信息",
                 "produces": [
                     "application/json"
@@ -529,6 +640,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "根据用户 ID 删除用户",
                 "produces": [
                     "application/json"
@@ -568,6 +684,28 @@
                     "type": "integer"
                 },
                 "team_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "value.CreateMemberArgs": {
+            "type": "object",
+            "properties": {
+                "roles": {
+                    "type": "integer"
+                },
+                "team_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "value.CreateMemberResult": {
+            "type": "object",
+            "properties": {
+                "member_id": {
                     "type": "string"
                 }
             }
@@ -763,6 +901,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
